# apoyo

./: DESCRIPTION  LICENSE  LICENSE.md  README.md
R/: bucket_report_metrics.R  clean_string.R  db.R  gcp.R  plot_dual_axis.R  print_info.R  print_questions.R  qdoubleaxis.R  theme_apoyo.R  theme_keith.R  tranformer_dual_axis.R
data/: paleta_apoyo.rda
man/: print_info.Rd
python/: pyproject.toml
python/apoyo/: __init__.py  db.py  gcp.py  metrics.py  plots.py  spss.py  text.py
python/examples/: 01_texto.ipynb  02_metricas.ipynb  03_visualizacion.ipynb  04_spss.ipynb  05_gcp_db.ipynb
